networkpolicy/cassandra.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cassandra
  namespace: cassandra 
spec:
  podSelector:
    matchLabels:
      run: cassandra 
  policyTypes:
  - Ingress 
  ingress:
  - from:
        
        - namespaceSelector:
            matchLabels:
              ns: default 
##create an exception policy where communicate should be eastablish between default ns and cassandra
